drinkapi/pepsi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pepsi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pepsi
  template:
    metadata:
      labels:
        app: pepsi
    spec:
      containers:
      - image: nginx:1.11.5
        name: pepsi
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: pepsi-nginx
