drinkapi/cola-clusterip.yml
apiVersion: v1 
kind: Service
metadata:
  name: cola-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: cola
