drinkapi/pepsi-clusterip.yml
apiVersion: v1 
kind: Service
metadata:
  name: pepsi-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: pepsi
